pa3/solutions/tfbbt8/pa3p1/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    CRATE
    IN
    RIGHTSHIFT
    FOR
    FINAL
    PUB
    SUPER
    USIZE
    POUNDEXCLAMATION
    DOLLAR
    EXTERN
    LEFTSHIFTEQUAL
    EXCLUSIVEOREQUAL
    ISIZE
    WHERE
    TYPE
    THREEDOTS
    VIRTUAL
    POUND
    SELF
    MOVE
    OFFSETOF
    ABSTRACT
    RIGHTSHIFTEQUAL
    MACRO_RULES
    APOSTRAPHE
    PRIV
    BE
    CONTINUE
    MOD
    MACRO
    IMPL
    SIZEOF
    TRAIT
    ALIGNOF
    CONST
    BREAK
    UNSIZED
    AS
    UNSAFE
    YIELD
    LEFTSHIFT
    NEWLINE
    STATIC
    PURE
    ERROR
    DO
    WILDCARD
    USE
    IGNORE
    OVERRIDE
    TYPEOF
    EXCLUSIVEOR

Grammar

Rule 0     S' -> crate
Rule 1     crate -> items
Rule 2     items -> item items
Rule 3     items -> item
Rule 4     items -> <empty>
Rule 5     item -> function
Rule 6     item -> struct
Rule 7     item -> enum
Rule 8     stmts -> stmt SEMICOLON stmts
Rule 9     stmts -> stmt
Rule 10    stmts -> <empty>
Rule 11    stmt -> return
Rule 12    stmt -> exp
Rule 13    stmt -> let
Rule 14    stmt -> function
Rule 15    exps -> exps
Rule 16    exps -> <empty>
Rule 17    exps -> exp COMMA exps
Rule 18    exps -> exp
Rule 19    exp -> LPAREN exp RPAREN
Rule 20    exp -> arith1
Rule 21    exp -> loop
Rule 22    exp -> while
Rule 23    exp -> box_new
Rule 24    exp -> if
Rule 25    exp -> match
Rule 26    exp -> arg_struct
Rule 27    exp -> assign
Rule 28    exp -> arr
Rule 29    exp -> arr_index
Rule 30    exp -> unit
Rule 31    exp -> <empty>
Rule 32    arith1 -> add
Rule 33    arith1 -> sub
Rule 34    arith1 -> arith2
Rule 35    arith2 -> mul
Rule 36    arith2 -> div
Rule 37    arith2 -> mod
Rule 38    arith2 -> neg
Rule 39    arith2 -> arith3
Rule 40    arith3 -> LPAREN arith1 RPAREN
Rule 41    arith3 -> fn_call
Rule 42    arith3 -> comp
Rule 43    arith3 -> field_lookup
Rule 44    arith3 -> arith4
Rule 45    arith4 -> id
Rule 46    arith4 -> ptr
Rule 47    arith4 -> lit
Rule 48    add -> arith1 ADD arith1
Rule 49    sub -> arith1 SUB arith1
Rule 50    mul -> arith1 MUL arith1
Rule 51    div -> arith1 DIV arith1
Rule 52    mod -> arith1 MODOP arith1
Rule 53    neg -> SUB arith4
Rule 54    comp -> lt
Rule 55    comp -> leq
Rule 56    comp -> gt
Rule 57    comp -> geq
Rule 58    comp -> eq
Rule 59    comp -> neq
Rule 60    comp -> or
Rule 61    comp -> and
Rule 62    comp -> not
Rule 63    lt -> arith1 LESSTHAN arith1
Rule 64    leq -> arith1 LESSTHANOREQUAL arith1
Rule 65    gt -> arith1 GREATERTHAN arith1
Rule 66    geq -> arith1 GREATERTHANOREQUAL arith1
Rule 67    eq -> arith1 EQUALTO arith1
Rule 68    neq -> arith1 NOTEQUAL arith1
Rule 69    or -> arith1 LOGICALOR arith1
Rule 70    and -> arith1 LOGICALAND arith1
Rule 71    not -> NOT arith1
Rule 72    ptr -> addr
Rule 73    ptr -> deref
Rule 74    ptr -> addr_of_mut
Rule 75    addr -> AND arith4
Rule 76    addr -> AND neg
Rule 77    deref -> MUL arith4
Rule 78    deref -> MUL neg
Rule 79    addr_of_mut -> AND MUT arith4
Rule 80    addr_of_mut -> AND MUT neg
Rule 81    unit -> LPAREN RPAREN
Rule 82    assign -> exp EQU exp
Rule 83    assign -> exp PLUSEQUAL exp
Rule 84    assign -> exp SUBEQUAL exp
Rule 85    assign -> exp DIVEQUAL exp
Rule 86    assign -> exp TIMESEQUAL exp
Rule 87    assign -> exp MODEQUAL exp
Rule 88    assign -> exp ANDEQUAL exp
Rule 89    assign -> exp OREQUAL exp
Rule 90    let -> LET pat COLON type EQU exp
Rule 91    let -> LET pat COLON type
Rule 92    let -> LET pat EQU exp
Rule 93    let -> LET pat
Rule 94    field_lookup -> exp PERIOD id
Rule 95    while -> WHILE LPAREN exp RPAREN block
Rule 96    loop -> LOOP block
Rule 97    if -> IF LPAREN exp RPAREN block
Rule 98    if -> if ELSE block
Rule 99    match -> MATCH LPAREN exp RPAREN LSQUIGBRACKET match_arms RSQUIGBRACKET
Rule 100   match_arms -> match_arm COMMA match_arms
Rule 101   match_arms -> match_arm
Rule 102   match_arm -> match_pats PIPE block
Rule 103   match_pats -> pat OR match_pats
Rule 104   match_pats -> pat
Rule 105   pats -> pat COMMA pats
Rule 106   pats -> pat
Rule 107   pat -> p_lit
Rule 108   pat -> LPAREN RPAREN
Rule 109   pat -> WC
Rule 110   pat -> SUB p_lit
Rule 111   pat -> id
Rule 112   pat -> REF id
Rule 113   pat -> REF MUT id
Rule 114   pat -> MUT id
Rule 115   pat -> AND pat
Rule 116   pat -> pat_arr
Rule 117   pat -> pat_enum
Rule 118   pat -> pat_struct
Rule 119   pat_arr -> LBRACKET pats RBRACKET
Rule 120   pat_struct -> id LSQUIGBRACKET pat_fields RSQUIGBRACKET
Rule 121   pat_fields -> pat_field COMMA pat_fields
Rule 122   pat_fields -> pat_field
Rule 123   pat_field -> id COLON pat
Rule 124   arr -> LBRACKET exps RBRACKET
Rule 125   arr_index -> exp LBRACKET exp RBRACKET
Rule 126   function -> FN id LPAREN fn_params_seq RPAREN block
Rule 127   function -> FN id LPAREN fn_params_seq RPAREN OBJECTACCESS type block
Rule 128   fn_call -> id LPAREN fn_args RPAREN
Rule 129   fn_args -> fn_arg fn_args
Rule 130   fn_args -> <empty>
Rule 131   fn_arg -> fn_arg COMMA
Rule 132   fn_arg -> lit
Rule 133   fn_arg -> id
Rule 134   fn_arg -> box_new
Rule 135   fn_arg -> fn_call
Rule 136   fn_arg -> arg_struct
Rule 137   lit -> p_lit
Rule 138   lit -> enum_con
Rule 139   p_lit -> LITDEC
Rule 140   p_lit -> LITCHAR
Rule 141   p_lit -> LITBOOL
Rule 142   p_lit -> LITSTRING
Rule 143   id -> ID
Rule 144   fn_params_seq -> fn_params
Rule 145   fn_params_seq -> <empty>
Rule 146   fn_params -> fn_param COMMA fn_params
Rule 147   fn_params -> fn_param
Rule 148   fn_param -> pat COLON type
Rule 149   fn_param -> pat COLON id
Rule 150   types -> type COMMA types
Rule 151   types -> type
Rule 152   type -> BOOL
Rule 153   type -> UEIGHT
Rule 154   type -> USIXTEEN
Rule 155   type -> UTHREETWO
Rule 156   type -> USIXFOUR
Rule 157   type -> IEIGHT
Rule 158   type -> ISIXTEEN
Rule 159   type -> ITHREETWO
Rule 160   type -> ISIXFOUR
Rule 161   type -> FTHREETWO
Rule 162   type -> FSIXFOUR
Rule 163   type -> CHAR
Rule 164   type -> STR
Rule 165   type -> box
Rule 166   type -> NOT
Rule 167   type -> type_ref
Rule 168   type -> id
Rule 169   type -> AND MUT type
Rule 170   type -> type_arr
Rule 171   type -> LPAREN RPAREN
Rule 172   type -> <empty>
Rule 173   type_arr -> LBRACKET type RBRACKET
Rule 174   type_arr -> LBRACKET type SEMICOLON p_lit RBRACKET
Rule 175   type_ref -> AND type
Rule 176   box -> BOX LESSTHAN type GREATERTHAN
Rule 177   box_new -> BOX CLASSACCESS NEW LPAREN exp RPAREN
Rule 178   struct -> STRUCT id LSQUIGBRACKET field_defs RSQUIGBRACKET
Rule 179   field_defs -> field_def field_defs
Rule 180   field_defs -> field_def
Rule 181   field_def -> field_def COMMA
Rule 182   field_def -> id COLON type
Rule 183   block -> LSQUIGBRACKET stmts RSQUIGBRACKET
Rule 184   return -> RETURN
Rule 185   return -> return exp
Rule 186   arg_struct -> id LSQUIGBRACKET body RSQUIGBRACKET
Rule 187   body -> param_arg body
Rule 188   body -> param_arg
Rule 189   param_arg -> param_arg COMMA
Rule 190   param_arg -> id COLON exp
Rule 191   enum_con -> enum_con LPAREN exps RPAREN
Rule 192   enum_con -> id CLASSACCESS id
Rule 193   pat_enum -> pat_enum LPAREN pats RPAREN
Rule 194   pat_enum -> id CLASSACCESS id
Rule 195   enum -> ENUM id LSQUIGBRACKET enum_params RSQUIGBRACKET
Rule 196   enum_params -> enum_param enum_params
Rule 197   enum_params -> <empty>
Rule 198   enum_param -> enum_param COMMA
Rule 199   enum_param -> id LPAREN types RPAREN
Rule 200   enum_param -> id

Terminals, with rules where they appear

ABSTRACT             : 
ADD                  : 48
ALIGNOF              : 
AND                  : 75 76 79 80 115 169 175
ANDEQUAL             : 88
APOSTRAPHE           : 
AS                   : 
BE                   : 
BOOL                 : 152
BOX                  : 176 177
BREAK                : 
CHAR                 : 163
CLASSACCESS          : 177 192 194
COLON                : 90 91 123 148 149 182 190
COMMA                : 17 100 105 121 131 146 150 181 189 198
CONST                : 
CONTINUE             : 
CRATE                : 
DIV                  : 51
DIVEQUAL             : 85
DO                   : 
DOLLAR               : 
ELSE                 : 98
ENUM                 : 195
EQU                  : 82 90 92
EQUALTO              : 67
ERROR                : 
EXCLUSIVEOR          : 
EXCLUSIVEOREQUAL     : 
EXTERN               : 
FINAL                : 
FN                   : 126 127
FOR                  : 
FSIXFOUR             : 162
FTHREETWO            : 161
GREATERTHAN          : 65 176
GREATERTHANOREQUAL   : 66
ID                   : 143
IEIGHT               : 157
IF                   : 97
IGNORE               : 
IMPL                 : 
IN                   : 
ISIXFOUR             : 160
ISIXTEEN             : 158
ISIZE                : 
ITHREETWO            : 159
LBRACKET             : 119 124 125 173 174
LEFTSHIFT            : 
LEFTSHIFTEQUAL       : 
LESSTHAN             : 63 176
LESSTHANOREQUAL      : 64
LET                  : 90 91 92 93
LITBOOL              : 141
LITCHAR              : 140
LITDEC               : 139
LITSTRING            : 142
LOGICALAND           : 70
LOGICALOR            : 69
LOOP                 : 96
LPAREN               : 19 40 81 95 97 99 108 126 127 128 171 177 191 193 199
LSQUIGBRACKET        : 99 120 178 183 186 195
MACRO                : 
MACRO_RULES          : 
MATCH                : 99
MOD                  : 
MODEQUAL             : 87
MODOP                : 52
MOVE                 : 
MUL                  : 50 77 78
MUT                  : 79 80 113 114 169
NEW                  : 177
NEWLINE              : 
NOT                  : 71 166
NOTEQUAL             : 68
OBJECTACCESS         : 127
OFFSETOF             : 
OR                   : 103
OREQUAL              : 89
OVERRIDE             : 
PERIOD               : 94
PIPE                 : 102
PLUSEQUAL            : 83
POUND                : 
POUNDEXCLAMATION     : 
PRIV                 : 
PUB                  : 
PURE                 : 
RBRACKET             : 119 124 125 173 174
REF                  : 112 113
RETURN               : 184
RIGHTSHIFT           : 
RIGHTSHIFTEQUAL      : 
RPAREN               : 19 40 81 95 97 99 108 126 127 128 171 177 191 193 199
RSQUIGBRACKET        : 99 120 178 183 186 195
SELF                 : 
SEMICOLON            : 8 174
SIZEOF               : 
STATIC               : 
STR                  : 164
STRUCT               : 178
SUB                  : 49 53 110
SUBEQUAL             : 84
SUPER                : 
THREEDOTS            : 
TIMESEQUAL           : 86
TRAIT                : 
TYPE                 : 
TYPEOF               : 
UEIGHT               : 153
UNSAFE               : 
UNSIZED              : 
USE                  : 
USIXFOUR             : 156
USIXTEEN             : 154
USIZE                : 
UTHREETWO            : 155
VIRTUAL              : 
WC                   : 109
WHERE                : 
WHILE                : 95
WILDCARD             : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

add                  : 32
addr                 : 72
addr_of_mut          : 74
and                  : 61
arg_struct           : 26 136
arith1               : 20 40 48 48 49 49 50 50 51 51 52 52 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71
arith2               : 34
arith3               : 39
arith4               : 44 53 75 77 79
arr                  : 28
arr_index            : 29
assign               : 27
block                : 95 96 97 98 102 126 127
body                 : 186 187
box                  : 165
box_new              : 23 134
comp                 : 42
crate                : 0
deref                : 73
div                  : 36
enum                 : 7
enum_con             : 138 191
enum_param           : 196 198
enum_params          : 195 196
eq                   : 58
exp                  : 12 17 18 19 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 92 94 95 97 99 125 125 177 185 190
exps                 : 15 17 124 191
field_def            : 179 180 181
field_defs           : 178 179
field_lookup         : 43
fn_arg               : 129 131
fn_args              : 128 129
fn_call              : 41 135
fn_param             : 146 147
fn_params            : 144 146
fn_params_seq        : 126 127
function             : 5 14
geq                  : 57
gt                   : 56
id                   : 45 94 111 112 113 114 120 123 126 127 128 133 149 168 178 182 186 190 192 192 194 194 195 199 200
if                   : 24 98
item                 : 2 3
items                : 1 2
leq                  : 55
let                  : 13
lit                  : 47 132
loop                 : 21
lt                   : 54
match                : 25
match_arm            : 100 101
match_arms           : 99 100
match_pats           : 102 103
mod                  : 37
mul                  : 35
neg                  : 38 76 78 80
neq                  : 59
not                  : 62
or                   : 60
p_lit                : 107 110 137 174
param_arg            : 187 188 189
pat                  : 90 91 92 93 103 104 105 106 115 123 148 149
pat_arr              : 116
pat_enum             : 117 193
pat_field            : 121 122
pat_fields           : 120 121
pat_struct           : 118
pats                 : 105 119 193
ptr                  : 46
return               : 11 185
stmt                 : 8 9
stmts                : 8 183
struct               : 6
sub                  : 33
type                 : 90 91 127 148 150 151 169 173 174 175 176 182
type_arr             : 170
type_ref             : 167
types                : 150 199
unit                 : 30
while                : 22

Parsing method: LALR

state 0

    (0) S' -> . crate
    (1) crate -> . items
    (2) items -> . item items
    (3) items -> . item
    (4) items -> .
    (5) item -> . function
    (6) item -> . struct
    (7) item -> . enum
    (126) function -> . FN id LPAREN fn_params_seq RPAREN block
    (127) function -> . FN id LPAREN fn_params_seq RPAREN OBJECTACCESS type block
    (178) struct -> . STRUCT id LSQUIGBRACKET field_defs RSQUIGBRACKET
    (195) enum -> . ENUM id LSQUIGBRACKET enum_params RSQUIGBRACKET

    $end            reduce using rule 4 (items -> .)
    FN              shift and go to state 4
    STRUCT          shift and go to state 7
    ENUM            shift and go to state 1

    items                          shift and go to state 2
    function                       shift and go to state 3
    struct                         shift and go to state 5
    enum                           shift and go to state 6
    crate                          shift and go to state 8
    item                           shift and go to state 9

state 1

    (195) enum -> ENUM . id LSQUIGBRACKET enum_params RSQUIGBRACKET
    (143) id -> . ID

    ID              shift and go to state 11

    id                             shift and go to state 10

state 2

    (1) crate -> items .

    $end            reduce using rule 1 (crate -> items .)


state 3

    (5) item -> function .

    FN              reduce using rule 5 (item -> function .)
    STRUCT          reduce using rule 5 (item -> function .)
    ENUM            reduce using rule 5 (item -> function .)
    $end            reduce using rule 5 (item -> function .)


state 4

    (126) function -> FN . id LPAREN fn_params_seq RPAREN block
    (127) function -> FN . id LPAREN fn_params_seq RPAREN OBJECTACCESS type block
    (143) id -> . ID

    ID              shift and go to state 11

    id                             shift and go to state 12

state 5

    (6) item -> struct .

    FN              reduce using rule 6 (item -> struct .)
    STRUCT          reduce using rule 6 (item -> struct .)
    ENUM            reduce using rule 6 (item -> struct .)
    $end            reduce using rule 6 (item -> struct .)


state 6

    (7) item -> enum .

    FN              reduce using rule 7 (item -> enum .)
    STRUCT          reduce using rule 7 (item -> enum .)
    ENUM            reduce using rule 7 (item -> enum .)
    $end            reduce using rule 7 (item -> enum .)


state 7

    (178) struct -> STRUCT . id LSQUIGBRACKET field_defs RSQUIGBRACKET
    (143) id -> . ID

    ID              shift and go to state 11

    id                             shift and go to state 13

state 8

    (0) S' -> crate .



state 9

    (2) items -> item . items
    (3) items -> item .
    (2) items -> . item items
    (3) items -> . item
    (4) items -> .
    (5) item -> . function
    (6) item -> . struct
    (7) item -> . enum
    (126) function -> . FN id LPAREN fn_params_seq RPAREN block
    (127) function -> . FN id LPAREN fn_params_seq RPAREN OBJECTACCESS type block
    (178) struct -> . STRUCT id LSQUIGBRACKET field_defs RSQUIGBRACKET
    (195) enum -> . ENUM id LSQUIGBRACKET enum_params RSQUIGBRACKET

  ! reduce/reduce conflict for $end resolved using rule 3 (items -> item .)
    $end            reduce using rule 3 (items -> item .)
    FN              shift and go to state 4
    STRUCT          shift and go to state 7
    ENUM            shift and go to state 1

  ! $end            [ reduce using rule 4 (items -> .) ]

    items                          shift and go to state 14
    function                       shift and go to state 3
    struct                         shift and go to state 5
    item                           shift and go to state 9
    enum                           shift and go to state 6

state 10

    (195) enum -> ENUM id . LSQUIGBRACKET enum_params RSQUIGBRACKET

    LSQUIGBRACKET   shift and go to state 15


state 11

    (143) id -> ID .

    LPAREN          reduce using rule 143 (id -> ID .)
    LSQUIGBRACKET   reduce using rule 143 (id -> ID .)
    CLASSACCESS     reduce using rule 143 (id -> ID .)
    ADD             reduce using rule 143 (id -> ID .)
    SUB             reduce using rule 143 (id -> ID .)
    MUL             reduce using rule 143 (id -> ID .)
    DIV             reduce using rule 143 (id -> ID .)
    MODOP           reduce using rule 143 (id -> ID .)
    LESSTHAN        reduce using rule 143 (id -> ID .)
    LESSTHANOREQUAL reduce using rule 143 (id -> ID .)
    GREATERTHAN     reduce using rule 143 (id -> ID .)
    GREATERTHANOREQUAL reduce using rule 143 (id -> ID .)
    EQUALTO         reduce using rule 143 (id -> ID .)
    NOTEQUAL        reduce using rule 143 (id -> ID .)
    LOGICALOR       reduce using rule 143 (id -> ID .)
    LOGICALAND      reduce using rule 143 (id -> ID .)
    EQU             reduce using rule 143 (id -> ID .)
    PLUSEQUAL       reduce using rule 143 (id -> ID .)
    SUBEQUAL        reduce using rule 143 (id -> ID .)
    DIVEQUAL        reduce using rule 143 (id -> ID .)
    TIMESEQUAL      reduce using rule 143 (id -> ID .)
    MODEQUAL        reduce using rule 143 (id -> ID .)
    ANDEQUAL        reduce using rule 143 (id -> ID .)
    OREQUAL         reduce using rule 143 (id -> ID .)
    LBRACKET        reduce using rule 143 (id -> ID .)
    PERIOD          reduce using rule 143 (id -> ID .)
    SEMICOLON       reduce using rule 143 (id -> ID .)
    RSQUIGBRACKET   reduce using rule 143 (id -> ID .)
    COMMA           reduce using rule 143 (id -> ID .)
    RBRACKET        reduce using rule 143 (id -> ID .)
    LOOP            reduce using rule 143 (id -> ID .)
    WHILE           reduce using rule 143 (id -> ID .)
    BOX             reduce using rule 143 (id -> ID .)
    IF              reduce using rule 143 (id -> ID .)
    MATCH           reduce using rule 143 (id -> ID .)
    ID              reduce using rule 143 (id -> ID .)
    NOT             reduce using rule 143 (id -> ID .)
    AND             reduce using rule 143 (id -> ID .)
    LITDEC          reduce using rule 143 (id -> ID .)
    LITCHAR         reduce using rule 143 (id -> ID .)
    LITBOOL         reduce using rule 143 (id -> ID .)
    LITSTRING       reduce using rule 143 (id -> ID .)
    RPAREN          reduce using rule 143 (id -> ID .)
    OR              reduce using rule 143 (id -> ID .)
    PIPE            reduce using rule 143 (id -> ID .)
    COLON           reduce using rule 143 (id -> ID .)


state 12

    (126) function -> FN id . LPAREN fn_params_seq RPAREN block
    (127) function -> FN id . LPAREN fn_params_seq RPAREN OBJECTACCESS type block

    LPAREN          shift and go to state 16


state 13

    (178) struct -> STRUCT id . LSQUIGBRACKET field_defs RSQUIGBRACKET

    LSQUIGBRACKET   shift and go to state 17


state 14

    (2) items -> item items .

    $end            reduce using rule 2 (items -> item items .)


state 15

    (195) enum -> ENUM id LSQUIGBRACKET . enum_params RSQUIGBRACKET
    (196) enum_params -> . enum_param enum_params
    (197) enum_params -> .
    (198) enum_param -> . enum_param COMMA
    (199) enum_param -> . id LPAREN types RPAREN
    (200) enum_param -> . id
    (143) id -> . ID

    RSQUIGBRACKET   reduce using rule 197 (enum_params -> .)
    ID              shift and go to state 11

    enum_params                    shift and go to state 20
    enum_param                     shift and go to state 18
    id                             shift and go to state 19

state 16

    (126) function -> FN id LPAREN . fn_params_seq RPAREN block
    (127) function -> FN id LPAREN . fn_params_seq RPAREN OBJECTACCESS type block
    (144) fn_params_seq -> . fn_params
    (145) fn_params_seq -> .
    (146) fn_params -> . fn_param COMMA fn_params
    (147) fn_params -> . fn_param
    (148) fn_param -> . pat COLON type
    (149) fn_param -> . pat COLON id
    (107) pat -> . p_lit
    (108) pat -> . LPAREN RPAREN
    (109) pat -> . WC
    (110) pat -> . SUB p_lit
    (111) pat -> . id
    (112) pat -> . REF id
    (113) pat -> . REF MUT id
    (114) pat -> . MUT id
    (115) pat -> . AND pat
    (116) pat -> . pat_arr
    (117) pat -> . pat_enum
    (118) pat -> . pat_struct
    (139) p_lit -> . LITDEC
    (140) p_lit -> . LITCHAR
    (141) p_lit -> . LITBOOL
    (142) p_lit -> . LITSTRING
    (143) id -> . ID
    (119) pat_arr -> . LBRACKET pats RBRACKET
    (193) pat_enum -> . pat_enum LPAREN pats RPAREN
    (194) pat_enum -> . id CLASSACCESS id
    (120) pat_struct -> . id LSQUIGBRACKET pat_fields RSQUIGBRACKET

    RPAREN          reduce using rule 145 (fn_params_seq -> .)
    LPAREN          shift and go to state 30
    WC              shift and go to state 40
    SUB             shift and go to state 32
    REF             shift and go to state 25
    MUT             shift and go to state 36
    AND             shift and go to state 37
    LITDEC          shift and go to state 29
    LITCHAR         shift and go to state 27
    LITBOOL         shift and go to state 33
    LITSTRING       shift and go to state 23
    ID              shift and go to state 11
    LBRACKET        shift and go to state 22

    fn_params                      shift and go to state 21
    pat                            shift and go to state 31
    fn_param                       shift and go to state 24
    p_lit                          shift and go to state 34
    id                             shift and go to state 35
    pat_enum                       shift and go to state 26
    fn_params_seq                  shift and go to state 28
    pat_arr                        shift and go to state 39
    pat_struct                     shift and go to state 38

state 17

    (178) struct -> STRUCT id LSQUIGBRACKET . field_defs RSQUIGBRACKET
    (179) field_defs -> . field_def field_defs
    (180) field_defs -> . field_def
    (181) field_def -> . field_def COMMA
    (182) field_def -> . id COLON type
    (143) id -> . ID

    ID              shift and go to state 11

    field_defs                     shift and go to state 42
    id                             shift and go to state 41
    field_def                      shift and go to state 43

state 18

    (196) enum_params -> enum_param . enum_params
    (198) enum_param -> enum_param . COMMA
    (196) enum_params -> . enum_param enum_params
    (197) enum_params -> .
    (198) enum_param -> . enum_param COMMA
    (199) enum_param -> . id LPAREN types RPAREN
    (200) enum_param -> . id
    (143) id -> . ID

    COMMA           shift and go to state 45
    RSQUIGBRACKET   reduce using rule 197 (enum_params -> .)
    ID              shift and go to state 11

    enum_params                    shift and go to state 44
    enum_param                     shift and go to state 18
    id                             shift and go to state 19

state 19

    (199) enum_param -> id . LPAREN types RPAREN
    (200) enum_param -> id .

    LPAREN          shift and go to state 46
    COMMA           reduce using rule 200 (enum_param -> id .)
    ID              reduce using rule 200 (enum_param -> id .)
    RSQUIGBRACKET   reduce using rule 200 (enum_param -> id .)


state 20

    (195) enum -> ENUM id LSQUIGBRACKET enum_params . RSQUIGBRACKET

    RSQUIGBRACKET   shift and go to state 47


state 21

    (144) fn_params_seq -> fn_params .

    RPAREN          reduce using rule 144 (fn_params_seq -> fn_params .)


state 22

    (119) pat_arr -> LBRACKET . pats RBRACKET
    (105) pats -> . pat COMMA pats
    (106) pats -> . pat
    (107) pat -> . p_lit
    (108) pat -> . LPAREN RPAREN
    (109) pat -> . WC
    (110) pat -> . SUB p_lit
    (111) pat -> . id
    (112) pat -> . REF id
    (113) pat -> . REF MUT id
    (114) pat -> . MUT id
    (115) pat -> . AND pat
    (116) pat -> . pat_arr
    (117) pat -> . pat_enum
    (118) pat -> . pat_struct
    (139) p_lit -> . LITDEC
    (140) p_lit -> . LITCHAR
    (141) p_lit -> . LITBOOL
    (142) p_lit -> . LITSTRING
    (143) id -> . ID
    (119) pat_arr -> . LBRACKET pats RBRACKET
    (193) pat_enum -> . pat_enum LPAREN pats RPAREN
    (194) pat_enum -> . id CLASSACCESS id
    (120) pat_struct -> . id LSQUIGBRACKET pat_fields RSQUIGBRACKET

    LPAREN          shift and go to state 30
    WC              shift and go to state 40
    SUB             shift and go to state 32
    REF             shift and go to state 25
    MUT             shift and go to state 36
    AND             shift and go to state 37
    LITDEC          shift and go to state 29
    LITCHAR         shift and go to state 27
    LITBOOL         shift and go to state 33
    LITSTRING       shift and go to state 23
    ID              shift and go to state 11
    LBRACKET        shift and go to state 22

    p_lit                          shift and go to state 34
    id                             shift and go to state 35
    pats                           shift and go to state 49
    pat_enum                       shift and go to state 26
    pat                            shift and go to state 48
    pat_arr                        shift and go to state 39
    pat_struct                     shift and go to state 38

state 23

    (142) p_lit -> LITSTRING .

    ADD             reduce using rule 142 (p_lit -> LITSTRING .)
    SUB             reduce using rule 142 (p_lit -> LITSTRING .)
    MUL             reduce using rule 142 (p_lit -> LITSTRING .)
    DIV             reduce using rule 142 (p_lit -> LITSTRING .)
    MODOP           reduce using rule 142 (p_lit -> LITSTRING .)
    LESSTHAN        reduce using rule 142 (p_lit -> LITSTRING .)
    LESSTHANOREQUAL reduce using rule 142 (p_lit -> LITSTRING .)
    GREATERTHAN     reduce using rule 142 (p_lit -> LITSTRING .)
    GREATERTHANOREQUAL reduce using rule 142 (p_lit -> LITSTRING .)
    EQUALTO         reduce using rule 142 (p_lit -> LITSTRING .)
    NOTEQUAL        reduce using rule 142 (p_lit -> LITSTRING .)
    LOGICALOR       reduce using rule 142 (p_lit -> LITSTRING .)
    LOGICALAND      reduce using rule 142 (p_lit -> LITSTRING .)
    EQU             reduce using rule 142 (p_lit -> LITSTRING .)
    PLUSEQUAL       reduce using rule 142 (p_lit -> LITSTRING .)
    SUBEQUAL        reduce using rule 142 (p_lit -> LITSTRING .)
    DIVEQUAL        reduce using rule 142 (p_lit -> LITSTRING .)
    TIMESEQUAL      reduce using rule 142 (p_lit -> LITSTRING .)
    MODEQUAL        reduce using rule 142 (p_lit -> LITSTRING .)
    ANDEQUAL        reduce using rule 142 (p_lit -> LITSTRING .)
    OREQUAL         reduce using rule 142 (p_lit -> LITSTRING .)
    LBRACKET        reduce using rule 142 (p_lit -> LITSTRING .)
    PERIOD          reduce using rule 142 (p_lit -> LITSTRING .)
    SEMICOLON       reduce using rule 142 (p_lit -> LITSTRING .)
    RSQUIGBRACKET   reduce using rule 142 (p_lit -> LITSTRING .)
    COMMA           reduce using rule 142 (p_lit -> LITSTRING .)
    RBRACKET        reduce using rule 142 (p_lit -> LITSTRING .)
    LPAREN          reduce using rule 142 (p_lit -> LITSTRING .)
    LOOP            reduce using rule 142 (p_lit -> LITSTRING .)
    WHILE           reduce using rule 142 (p_lit -> LITSTRING .)
    BOX             reduce using rule 142 (p_lit -> LITSTRING .)
    IF              reduce using rule 142 (p_lit -> LITSTRING .)
    MATCH           reduce using rule 142 (p_lit -> LITSTRING .)
    ID              reduce using rule 142 (p_lit -> LITSTRING .)
    NOT             reduce using rule 142 (p_lit -> LITSTRING .)
    AND             reduce using rule 142 (p_lit -> LITSTRING .)
    LITDEC          reduce using rule 142 (p_lit -> LITSTRING .)
    LITCHAR         reduce using rule 142 (p_lit -> LITSTRING .)
    LITBOOL         reduce using rule 142 (p_lit -> LITSTRING .)
    LITSTRING       reduce using rule 142 (p_lit -> LITSTRING .)
    RPAREN          reduce using rule 142 (p_lit -> LITSTRING .)
    COLON           reduce using rule 142 (p_lit -> LITSTRING .)
    OR              reduce using rule 142 (p_lit -> LITSTRING .)
    PIPE            reduce using rule 142 (p_lit -> LITSTRING .)


state 24

    (146) fn_params -> fn_param . COMMA fn_params
    (147) fn_params -> fn_param .

    COMMA           shift and go to state 50
    RPAREN          reduce using rule 147 (fn_params -> fn_param .)


state 25

    (112) pat -> REF . id
    (113) pat -> REF . MUT id
    (143) id -> . ID

    MUT             shift and go to state 52
    ID              shift and go to state 11

    id                             shift and go to state 51

state 26

    (117) pat -> pat_enum .
    (193) pat_enum -> pat_enum . LPAREN pats RPAREN

    COLON           reduce using rule 117 (pat -> pat_enum .)
    EQU             reduce using rule 117 (pat -> pat_enum .)
    SEMICOLON       reduce using rule 117 (pat -> pat_enum .)
    RSQUIGBRACKET   reduce using rule 117 (pat -> pat_enum .)
    OR              reduce using rule 117 (pat -> pat_enum .)
    PIPE            reduce using rule 117 (pat -> pat_enum .)
    COMMA           reduce using rule 117 (pat -> pat_enum .)
    RBRACKET        reduce using rule 117 (pat -> pat_enum .)
    RPAREN          reduce using rule 117 (pat -> pat_enum .)
    LPAREN          shift and go to state 53


state 27

    (140) p_lit -> LITCHAR .
